--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "commit": "git add . && git-cz"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/core": "^10.5.0",
+    "ant-design-vue": "^4.0.6",
+    "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
+    "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.6.5",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
@@ -26,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "commitizen": "^4.3.0",
     "commitlint-config-cz": "^0.13.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -50,8 +61,12 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
+    "unocss": "^0.57.2",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.5"
   },
   "lint-staged": {
