--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ant-design-vue": "^4.0.6",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/lodash-es": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.2.3",
