--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
