--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "app-layout",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -31,8 +30,10 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@ant-design/colors": "^7.0.0",
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -51,14 +52,20 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "lint-staged": "^15.0.2",
+    "postcss": "^8.4.31",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-property-sort-order-smacss": "^9.1.0",
     "stylelint-config-recommended": "^13.0.0",
+    "stylelint-config-recommended-scss": "^13.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "ts-node": "^10.9.1",
@@ -74,17 +81,17 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.json": [
+    "package.json": [
       "prettier --write"
     ],
     "*.vue": [
-      "eslint --fix ",
-      "prettier --write ",
-      "stylelint --fix --allow-empty-input "
+      "prettier --write",
+      "eslint --fix",
+      "stylelint --fix"
     ],
     "*.{scss,less,styl,html}": [
-      "stylelint --fix --allow-empty-input ",
-      "prettier --write "
+      "prettier --write",
+      "stylelint --fix"
     ],
     "*.md": [
       "prettier --write "
