--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "#/*": ["types/*"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -21,6 +26,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
+    "**/*.d.ts",
     "types/**/*.d.ts",
     "types/**/*.ts",
     "src/**/*.ts",
