--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@vueuse/core": "^10.5.0",
     "ant-design-vue": "^4.0.6",
     "axios": "^1.6.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
     "vue-router": "^4.2.5"
@@ -33,6 +35,7 @@
     "@ant-design/colors": "^7.0.0",
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
