--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-types": "^5.1.1"
   },
   "devDependencies": {
     "@ant-design/colors": "^7.0.0",
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@purge-icons/generated": "^0.9.0",
     "@types/crypto-js": "^4.2.1",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^20.9.0",
