--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "sortablejs": "^1.15.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
     "vue-router": "^4.2.5",
@@ -42,6 +44,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^20.9.0",
+    "@types/sortablejs": "^1.15.5",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.2.3",
