--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@iconify/iconify": "^3.1.1",
     "@vueuse/core": "^10.5.0",
     "ant-design-vue": "^4.0.6",
     "axios": "^1.6.0",
@@ -40,6 +41,7 @@
     "@ant-design/colors": "^7.0.0",
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@iconify/json": "^2.2.142",
     "@purge-icons/generated": "^0.9.0",
     "@types/crypto-js": "^4.2.1",
     "@types/lodash-es": "^4.17.11",
@@ -84,6 +86,7 @@
     "unocss": "^0.57.2",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vite-plugin-purge-icons": "^0.9.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.5"
   },
