✨ feat:(custom): add chome html page title

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "unocss": "^0.57.2",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-purge-icons": "^0.9.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.5"
