--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^20.9.0",
+    "@types/nprogress": "^0.2.3",
     "@types/sortablejs": "^1.15.5",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
