--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@iconify/iconify": "^3.1.1",
+    "@micro-zoe/micro-app": "1.0.0-rc.2",
     "@vueuse/core": "^10.5.0",
     "ant-design-vue": "^4.0.6",
     "axios": "^1.6.0",
